crates/tui/src/ui/snapshots/tui__ui__snapshot_tests__help_overlay.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ F5  Start  Ctrl+P  Files  ?  Help  q  Quit                                   │"
"└───────────┌ Help (? to close) ───────────────────────────────────┐───────────┘"
"┌ Files ────│── Global ──                                          │───────────┐"
"│> ▏        │  q / Ctrl+C      Quit                                │           │"
"│───────────│  ?               Toggle this help                    │           │"
"│No files fo│  Ctrl+P          Open file picker                    │           │"
"│           │  Ctrl+F, /       Search in file                      │           │"
"│           │  Tab / S-Tab     Cycle focus fwd/back                │           │"
"│           │  Alt+1/2/3       Switch bottom tab                   │           │"
"│           │  Esc             Close popup / cancel                │           │"
"│           │                                                      │           │"
"│           │── Config ──                                          │           │"
"│           │  h / Left        Previous config                     │           │"
"└───────────│  l / Right       Next config                         │───────────┘"
"┌ Variables │                                                      │───────────┐"
"│  (no sessi│── Debugger ──                                        │           │"
"│           │  F5              Start / Continue / Restart          │           │"
"│           │  Shift+F5        Terminate / Shutdown                │           │"
"│           │  Ctrl+Shift+F5   Restart session                     │           │"
"│           │  F10             Step Over                           │           │"
"│           └──────────────────────────────────────────────────────┘           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION                                                                     "
