crates/tui/src/ui/snapshots/tui__ui__snapshot_tests__no_session_empty.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ F5  Start  Ctrl+P  Files  ?  Help  q  Quit                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Files ───────────────┐┌ Code ────────────────────────────────────────────────┐"
"│> ▏                   ││                    (no file open)                    │"
"│──────────────────────││                                                      │"
"│No files found        ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Variables [Alt+1] [y:yank] ──────────────────────────────────────────────────┐"
"│  (no session)                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION                                                                     "
