crates/tui/src/ui/snapshots/tui__ui__snapshot_tests__no_session_with_file.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ F5  Start  Ctrl+P  Files  ?  Help  q  Quit                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Files ───────────────┐┌ test.py ─────────────────────────────────────────────┐"
"│> ▏                   ││ 1 def hello():                                       │"
"│──────────────────────││ 2     print('hi')                                    │"
"│No files found        ││ 3                                                    │"
"│                      ││ 4 hello()                                            │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Variables [Alt+1] [y:yank] ──────────────────────────────────────────────────┐"
"│  (no session)                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION  test.py:1                                                          "
