crates/tui/src/ui/snapshots/tui__ui__snapshot_tests__output_tab_with_lines.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ Shift+F5  Stop  Ctrl+P  Files  ?  Help  q  Quit                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Call Stack ──────────┐┌ Code ────────────────────────────────────────────────┐"
"│  (no session)        ││                    (no file open)                    │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Breakpoints [a:add d:┐│                                                      │"
"│  (none)              ││                                                      │"
"│                      ││                                                      │"
"│                      ││                                                      │"
"└──────────────────────┘│                                                      │"
"┌ Threads ─────────────┐│                                                      │"
"└──────────────────────┘└──────────────────────────────────────────────────────┘"
"┌ Output [Alt+2] (auto) ───────────────────────────────────────────────────────┐"
"│Hello from program                                                            │"
"│[err] Warning: something                                                      │"
"│[dbg] Debugger message                                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" RUNNING                                                                        "
