crates/tui/src/ui/snapshots/tui__ui__snapshot_tests__zen_mode_empty.snap
---
source: crates/tui/src/ui/mod.rs
expression: output
---
"┌ Code ────────────────────────────────────────────────────────────────────────┐"
"│                                (no file open)                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" NO SESSION  [Zen: z]                                                           "
